<resources>
    <string name="app_name">laborki03</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="Sounds">Sounds</string>
    <string name="Sound1">Sound 1</string>
    <string name="Sound2">Sound 2</string>
    <string name="Sound3">Sound 3</string>
    <string name="Sound4">Sound 4</string>
    <string name="current_sound_str">"Current Sound: "</string>
    <string name="back_message">Back message</string>
    <string name="set_sound">Set sound</string>
</resources>
